# rust-gateway

./: Cargo.toml  README.md  config.yaml
src/: handlers.rs  main.rs  models.rs  registry.rs  routes.rs
src/config/: mod.rs
src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs  proxy.rs  register.rs
src/load_balancer/: mod.rs  round_robin.rs
src/metrics/: collector.rs  mod.rs
src/models/: config.rs  mod.rs  request.rs
src/rate_limiter/: in_memory.rs  mod.rs
src/registry/: in_memory.rs  mod.rs
src/routes/: builder.rs  mod.rs
